--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </nav>
     <div class="hero"></div>
     <div class="content">
-        <article class="search-engine-optimization">
+        <article id="search-engine-optimization" class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="seo stock image"/>
             <h2>Search Engine Optimization</h2>
             <p>
